<resources>
    <string name="app_name">Smart Tool</string>

    <!--Общие-->
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="email">e-mail</string>
    <string name="phone">Телефон</string>
    <string name="save">Сохранить</string>
    <string name="ok">OK</string>

    <!--Диалоги-->
    <string name="search_devices_dialog_title">Поиск устройств</string>
    <string name="search_devices_dialog_message">Пожалуйста, подождите…</string>

    <string name="devices_not_found_dialog_title">Результат поиска</string>
    <string name="devices_not_found_dialog_message">Устройства не найдены :(</string>

    <string name="bluetooth_is_not_supported_title">Ошибка</string>
    <string name="bluetooth_is_not_supported_message">Ваш телефон не поддерживает bluetooth</string>

    <string name="save_profile_dialog_title">Профиль</string>
    <string name="save_profile_dialog_message">Данные сохранены</string>

    <!--Кнопки-->
    <string name="search_device_button">Найти устройство</string>
    <string name="profile_button">Профиль</string>

    <!---->

    <string name="title_activity_profile">Профиль</string>

    <string name="action_settings">Settings</string>

</resources>
